--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,6 @@
 name: 🐛 Bug Bounty Hunter
 description: Report an bug in hr-chatbot and help improve the project!
-labels: ["🛠 goal: fix", "good first issue", "🤩 Up for the grab", "help wanted", "enhancement", "bug"]
+labels: ["🛠 goal: fix", "enhancement", "bug"]
 title: "[BUG 🐞] <description>"
 body:
     - type: textarea
@@ -27,13 +27,11 @@ body:
           value: |
 
               ## **Make sure to read the [CONTRIBUTING](https://github.com/warmachine028/hr-chatbot/blob/main/CONTRIBUTING.md) and [SETUP](https://github.com/warmachine028/hr-chatbot/tree/main/rules) docs before proceeding**
-              ## Happy contributing. 💐
-              Star my other Repositories [here](https://github.com/warmachine028)
+              
       validations:
           required: false
     - type: markdown
       attributes:
           value: |
               ## **Make sure to read the [CONTRIBUTING](https://github.com/warmachine028/hr-chatbot/blob/main/CONTRIBUTING.md) and [SETUP](https://github.com/warmachine028/hr-chatbot/tree/main/rules) docs before proceeding**
-              ## Happy contributing. 💐
-              Star my other Repositories [here](https://github.com/warmachine028?tab=repositories)
+             
