--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -69,5 +69,6 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
-      with:
-        exclude: '.github/**'
+      paths-ignore: '.github/**'
+      # with:
+      #   paths-ignore: '.github/**'
