--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.4.1
+click==8.1.7
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.1
@@ -12,6 +13,7 @@ jupyter_client==8.6.2
 jupyter_core==5.7.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
+nltk==3.8.1
 numpy==1.26.4
 packaging==24.1
 pandas==2.2.2
@@ -25,12 +27,14 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 pywin32==306
 pyzmq==26.0.3
+regex==2024.5.15
 scikit-learn==1.5.0
 scipy==1.13.1
 six==1.16.0
 stack-data==0.6.3
 threadpoolctl==3.5.0
 tornado==6.4.1
+tqdm==4.66.4
 traitlets==5.14.3
 tzdata==2024.1
 wcwidth==0.2.13
