--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,19 +5,28 @@ comm==0.2.2
 debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
+filelock==3.15.1
+fsspec==2024.6.0
+intel-openmp==2021.4.0
 ipykernel==6.29.4
 ipython==8.25.0
 jedi==0.19.1
+Jinja2==3.1.4
 joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+mkl==2021.4.0
+mpmath==1.3.0
 nest-asyncio==1.6.0
+networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
+pillow==10.2.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==5.9.8
@@ -32,9 +41,15 @@ scikit-learn==1.5.0
 scipy==1.13.1
 six==1.16.0
 stack-data==0.6.3
+sympy==1.12.1
+tbb==2021.12.0
 threadpoolctl==3.5.0
+torch==2.3.1
+torchaudio==2.3.1+cpu
+torchvision==0.18.1+cpu
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.1
 wcwidth==0.2.13
