--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -69,3 +69,13 @@ updates:
       interval: daily
       time: "21:00"
     open-pull-requests-limit: 10
+  - package-ecosystem: pip
+    directory: "src/"
+    schedule:
+      interval: daily
+      time: "13:00"
+    open-pull-requests-limit: 10
+    groups:
+    python-packages:
+      patterns:
+        - "*"
