config: added .vscode in .gitignore and added .prettierrc

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,15 +15,11 @@ on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
-    paths-ignore: 
-      - '.github/*'
-      - '*.md'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-    paths-ignore: 
-      - '.github/*'
-      - '*.md'
+  # schedule:
+   #- cron: '40 7 * * 2'
 
 jobs:
   analyze:
@@ -37,9 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'python' ]
-        include:
-          - python_exists: ${{ fromJSON('["true","false"]') }}
+        language: [ 'javascript' ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
 
@@ -63,7 +57,6 @@ jobs:
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
-      if: matrix.python_exists == 'true'
       uses: github/codeql-action/autobuild@v3
 
     # ℹ️ Command-line programs to run using the OS shell.
@@ -77,9 +70,4 @@ jobs:
     #   ./location_of_script_within_repo/buildscript.sh
 
     - name: Perform CodeQL Analysis
-      if: matrix.python_exists == 'true'
       uses: github/codeql-action/analyze@v3
-
-    # Add a step to handle the case when no Python files are detected
-    - name: No Python files detected
-      run: echo "No Python files detected, skipping CodeQL analysis."
