--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 colorama==0.4.6
 filelock==3.15.4
 Flask==3.0.3
+Flask-Cors==4.0.1
 fsspec==2024.6.1
 gunicorn==22.0.0
 intel-openmp==2021.4.0
